<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:id="@+id/input_window"
        android:textSize="20sp"
        android:paddingStart="20dp"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            >
            <Button
                android:id="@+id/btn_1"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/btn_1"
                android:textSize="18sp"
                />
            <Button
                android:id="@+id/btn_2"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/btn_2"
                android:textSize="18sp"
                />
            <Button
                android:id="@+id/btn_3"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/btn_3"
                android:textSize="18sp"
                />
            <Button
                android:id="@+id/btn_plus"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/btn_plus"
                android:textSize="18sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            >
            <Button
                android:id="@+id/btn_4"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/btn_4"
                android:textSize="18sp"
                />
            <Button
                android:id="@+id/btn_5"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/btn_5"
                android:textSize="18sp"
                />
            <Button
                android:id="@+id/btn_6"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/btn_6"
                android:textSize="18sp"
                />
            <Button
                android:id="@+id/btn_minus"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/btn_minus"
                android:textSize="18sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            >
            <Button
                android:id="@+id/btn_7"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/btn_7"
                android:textSize="18sp"
                />
            <Button
                android:id="@+id/btn_8"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/btn_8"
                android:textSize="18sp"
                />
            <Button
                android:id="@+id/btn_9"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/btn_9"
                android:textSize="18sp"
                />
            <Button
                android:id="@+id/btn_multi"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/btn_multi"
                android:textSize="18sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            >
            <Button
                android:id="@+id/btn_clear"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/btn_clear"
                android:textSize="18sp"
                />
            <Button
                android:id="@+id/btn_0"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/btn_0"
                android:textSize="18sp"
                />
            <Button
                android:id="@+id/btn_eql"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/btn_eql"
                android:textSize="18sp"
                />
            <Button
                android:id="@+id/btn_divide"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/btn_divide"
                android:textSize="18sp"
                />
        </LinearLayout>

        <Button
            android:id="@+id/btn_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/Gray"
            android:text="@string/btn_history"
            android:textSize="18sp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/adv_Operators"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="150dp"
        android:background="@color/black"
        >
        <Button
            android:id="@+id/btn_mod"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:text="@string/btn_mod"
            />
        <Button
            android:id="@+id/btn_pow"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:text="@string/btn_pow"
            />
        <Button
            android:id="@+id/btn_max"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:text="@string/btn_max"
            />
        <Button
            android:id="@+id/btn_min"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:text="@string/btn_min"
            />
    </LinearLayout>



</LinearLayout>